--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "1.0.17"
   },
   "dependencies": {
+    "bodymovin": "^4.12.3",
     "bootstrap": "^4.0.0-beta.2",
     "flow-bin": "^0.58.0",
     "jquery": "^3.2.1",
