--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.0.0",
     "react-animations": "^1.0.0",
     "react-dom": "^16.0.0",
+    "react-google-maps": "^9.2.2",
     "react-intl": "^2.4.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
