--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-transition-group": "^2.2.1",
     "reactstrap": "next",
     "simple-line-icons": "^2.4.1",
-    "styled-components": "^2.2.3",
-    "typeface-roboto": "^0.0.45"
+    "styled-components": "^2.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
